--- a/account.cmd/src/main/resources/application.yml
+++ b/account.cmd/src/main/resources/application.yml
@@ -12,3 +12,7 @@ spring:
       bootstrap-servers: localhost:9092
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+
+techbank:
+  openapi:
+    dev-url: http://localhost:5010
